--- a/app/views/cursada_listar.html
+++ b/app/views/cursada_listar.html
@@ -1,7 +1,6 @@
 <main class="listar-container">
 
-        <a href="#/cursadas-agregar" class="btn btn-agregar">Agregar cursada</a>
-
+        <a href="#/cursadas-agregar/{{idAlumno}}" class="btn btn-agregar">Agregar cursada</a>
         <div class="nav-wrapper">
             <form>
               <div class="input-field">
