--- a/app/views/examenes_listar.html
+++ b/app/views/examenes_listar.html
@@ -1,6 +1,6 @@
 <main class="listar-container">
 
-        <a href="#/examenes-agregar" class="btn btn-agregar">Agregar examen</a>
+        <a href="#/examenes-agregar/{{cursada.id}}" class="btn btn-agregar">Agregar examen</a>
 
         <div class="nav-wrapper">
             <form>
