--- a/app/views/comision_listar.html
+++ b/app/views/comision_listar.html
@@ -27,7 +27,7 @@
               <td>{{comision.anio}}</td>
               <td>{{comision.cuatrimestre}}</td>
               <td>{{comision.nombreMateria}}</td>
-              <td><a title="Editar" href="#/comisiones-agregar/:id"><i class="listar-iconos material-icons">edit</i></a></td>
+              <td><a title="Editar" href="#/comisiones-agregar/{{comision.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
             </tr>
           </tbody>
         </table>
