Creando y listando alumnos

--- a/app/views/alumno_listar.html
+++ b/app/views/alumno_listar.html
@@ -20,7 +20,7 @@
     </thead>
 
     <tbody>
-      <tr ng-repeat="alumno in alumnos | filter: buscar">
+      <tr ng-repeat="alumno in alumnos ">
         <td>{{alumno.username}}</td>
         <td>{{alumno.first_name}}</td>
         <td>{{alumno.last_name}}</td>
