--- a/app/views/cursada_listar.html
+++ b/app/views/cursada_listar.html
@@ -1,5 +1,5 @@
 <main class="listar-container" ng-init="getCursadas(idAlumno)">
-
+        <a href="#/alumnos-listar" class="btn btn-agregar">Volver</a>
         <a href="#/cursadas-agregar/{{idAlumno}}" class="btn btn-agregar">Agregar cursada</a>
         <div class="nav-wrapper">
             <form>
