--- a/app/views/alumno_informe_listar.html
+++ b/app/views/alumno_informe_listar.html
@@ -1,4 +1,6 @@
-<main class="listar-container">
+<main class="listar-container" ng-init="obtenerInformes()">
+    <a href="#/alumnos-listar" class="btn btn-agregar">Volver</a>
+    <a href="#/informes-agregar/{{idAlumno}}" class="btn btn-agregar">Agregar informe</a>
     <div class="nav-wrapper">
         <form>
           <div class="input-field">
@@ -14,15 +16,17 @@
           <tr>
               <th>Fecha</th>
               <th>Título</th>
-              <th>Opciones</th>
+              <th>Descripción</th>
+              <!-- <th>Opciones</th> -->
           </tr>
         </thead>
 
         <tbody>
-          <tr ng-repeat="informe in informes | filter: buscar">
+          <tr ng-repeat="informe in informes"> <!--  | filter: buscar -->
             <td>{{informe.fecha}}</td>
             <td>{{informe.titulo}}</td>
-            <td><a title="Ver informe" href="#/informes-ver/{{informe.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
+            <td>{{informe.descripcion}}</td>
+            <!-- <td><a title="Ver informe" href="#/informes-ver/{{informe.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td> -->
           </tr>
         </tbody>
       </table>
@@ -40,6 +44,10 @@
     .listar-iconos{
       margin-top: 10px;
       padding: 5px;
+    }
+    .btn-agregar{
+            margin-top: 20px;
+            margin-left: 20px;
     }
     @media screen and (max-width:800px){
       .listar-container{
