--- a/app/views/comision_agregar.html
+++ b/app/views/comision_agregar.html
@@ -1,4 +1,6 @@
 <main id="container" class="container" ng-init="obtenerDatosAgregarComision()">
+        <a href="#/comisiones-listar" class="btn btn-agregar">Volver</a>
+
         <h2 ng-show="!isAdding">Agregar <strong>comisión</strong></h2>
         <h2 ng-show="isAdding">Modificar <strong>comisión</strong></h2>
     
@@ -85,7 +87,10 @@
             font-size: 12px;
             color: #EA2E49;
         }
-    
+        .btn-agregar{
+            margin-top: 20px;
+            margin-left: 20px;
+        }
         .elementos{
             margin: 0 !important;
         }
