--- a/app/views/cursada_agregar.html
+++ b/app/views/cursada_agregar.html
@@ -1,4 +1,6 @@
 <main id="container" class="container" ng-init="obtenerComisiones()">
+    <a href="#/cursadas-listar/{{idAlumno}}" class="btn btn-agregar">Volver</a>
+
     <h2>Agregar <strong>cursada</strong></h2>
     
     <div class="row">
@@ -51,7 +53,10 @@
         font-size: 12px;
         color: #EA2E49;
     }
-
+    .btn-agregar{
+            margin-top: 20px;
+            margin-left: 20px;
+    }
     .elementos{
         margin: 0 !important;
     }
