--- a/app/views/materia_agregar.html
+++ b/app/views/materia_agregar.html
@@ -1,4 +1,6 @@
 <main class="container">
+        <a href="#/materias-listar" class="btn btn-agregar">Volver</a>
+
         <h2 ng-show="!isAdding">Agregar <strong>materia</strong></h2>
         <h2 ng-show="isAdding">Modificar <strong>materia</strong></h2>
     
@@ -35,7 +37,10 @@
             font-size: 12px;
             color: #EA2E49;
         }
-    
+        .btn-agregar{
+            margin-top: 20px;
+            margin-left: 20px;
+        }
         .elementos{
             margin: 0 !important;
         }
