--- a/app/views/alumno_agregar.html
+++ b/app/views/alumno_agregar.html
@@ -1,4 +1,7 @@
 <main class="container">
+    
+    <a href="#/alumnos-listar" class="btn btn-volver">Volver</a>
+
     <h2 ng-show="!isAdding">Agregar <strong>alumno</strong></h2>
     <h2 ng-show="isAdding">Modificar <strong>alumno</strong></h2>
 
@@ -90,7 +93,9 @@
         font-size: 12px;
         color: #EA2E49;
     }
-
+    .btn-volver{
+        margin-top: 20px;
+    }
     .elementos{
         margin: 0 !important;
     }
