--- a/app/views/comision_agregar.html
+++ b/app/views/comision_agregar.html
@@ -1,5 +1,5 @@
 <main id="container" class="container" ng-init="obtenerDatosAgregarComision()">
-        <a href="#/comisiones-listar" class="btn btn-agregar">Volver</a>
+        <a href="#/comisiones-listar" class="btn btn-volver">Volver</a>
 
         <h2 ng-show="!isAdding">Agregar <strong>comisión</strong></h2>
         <h2 ng-show="isAdding">Modificar <strong>comisión</strong></h2>
@@ -87,9 +87,8 @@
             font-size: 12px;
             color: #EA2E49;
         }
-        .btn-agregar{
+        .btn-volver{
             margin-top: 20px;
-            margin-left: 20px;
         }
         .elementos{
             margin: 0 !important;
