--- a/app/views/cursada_agregar.html
+++ b/app/views/cursada_agregar.html
@@ -1,5 +1,5 @@
 <main id="container" class="container" ng-init="obtenerComisiones()">
-    <a href="#/cursadas-listar/{{idAlumno}}" class="btn btn-agregar">Volver</a>
+    <a href="#/cursadas-listar/{{idAlumno}}" class="btn btn-volver">Volver</a>
 
     <h2>Agregar <strong>cursada</strong></h2>
     
@@ -53,9 +53,8 @@
         font-size: 12px;
         color: #EA2E49;
     }
-    .btn-agregar{
+    .btn-volver{
             margin-top: 20px;
-            margin-left: 20px;
     }
     .elementos{
         margin: 0 !important;
