--- a/app/views/materia_agregar.html
+++ b/app/views/materia_agregar.html
@@ -1,5 +1,5 @@
 <main class="container">
-        <a href="#/materias-listar" class="btn btn-agregar">Volver</a>
+        <a href="#/materias-listar" class="btn btn-volver">Volver</a>
 
         <h2 ng-show="!isAdding">Agregar <strong>materia</strong></h2>
         <h2 ng-show="isAdding">Modificar <strong>materia</strong></h2>
@@ -37,9 +37,8 @@
             font-size: 12px;
             color: #EA2E49;
         }
-        .btn-agregar{
+        .btn-volver{
             margin-top: 20px;
-            margin-left: 20px;
         }
         .elementos{
             margin: 0 !important;
