escuela, ciudad y pais

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -81,7 +81,7 @@
     <li><a href="#/materias-listar">Materias</a></li>
     <li><a href="#/profesores-listar">Profesores</a></li>
     <li><a href="#/comisiones-listar">Comisiones</a></li>
-    <li><a href="#/ciudades-listar">Escuelas</a></li>
+    <li><a href="#/escuelas-listar">Escuelas</a></li>
     <li><a href="#/ciudades-listar">Ciudades</a></li>
     <li><a href="#/paises-listar">Países</a></li>
     <li class="divider"></li>
