--- a/app/views/pais_listar.html
+++ b/app/views/pais_listar.html
@@ -1,6 +1,4 @@
-<main class="listar-container" ng-init="getCursadas(idAlumno)">
-
-        <a href="#/paises-listar" class="btn btn-volver">Volver</a>
+<main class="listar-container" ng-init="obtenerPaises()">
 
         <a href="#/paises-agregar" class="btn btn-agregar">Agregar país</a>
         <div class="nav-wrapper">
