--- a/app/views/escuela_listar.html
+++ b/app/views/escuela_listar.html
@@ -24,7 +24,7 @@
           <tr ng-repeat="escuela in escuelas">
             <td>{{escuela.nombre}}</td>
             <td>{{escuela.orientacion}}</td>
-            <td><a title="Editar" href="#/escuelas-agregar/{{escuela.id}}"><i class="listar-iconos material-icons">Edit</i></a></td>
+            <td><a title="Editar" href="#/escuelas-agregar/{{escuela.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
           </tr>
         </tbody>
       </table>
