--- a/app/views/pais_listar.html
+++ b/app/views/pais_listar.html
@@ -22,7 +22,7 @@
             <tbody>
               <tr ng-repeat="pais in paises ">
                 <td>{{pais.nombre}}</td>
-                <td><a title="Editar" href="#/paises-agregar/{{pais.id}}"><i class="listar-iconos material-icons">Edit</i></a></td>
+                <td><a title="Editar" href="#/paises-agregar/{{pais.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
               </tr>
             </tbody>
           </table>
