--- a/app/views/actividad_agregar.html
+++ b/app/views/actividad_agregar.html
@@ -47,8 +47,11 @@
         </div>
     </main>
     
-    <style>
+    <script>
+        $('select').material_select();
+    </script>
 
+    <style>
         .botonHorario{
             margin: 17px;
         }
