--- a/app/views/alumno_listar.html
+++ b/app/views/alumno_listar.html
@@ -33,8 +33,9 @@
           <a title="Cursadas" href="#/cursadas-listar/{{alumno.id}}"><i class="listar-iconos material-icons">class</i></a>
           <a title="Ver informes" href="#/informes-listar/{{alumno.id}}"><i class="listar-iconos material-icons">library_books</i></a>
           <a title="Ver Actividades" href="#/actividades-listar/{{alumno.id}}"><i class="listar-iconos material-icons">watch_later</i></a>
-          <a href="#/alumnos-agregar/{{alumno.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a> </td>
-      </tr>
+          <a href="#/alumnos-agregar/{{alumno.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
+          <a href="#/alumnos-ver/{{alumno.id}}"><i title="Ver" class="listar-iconos material-icons">search</i></a></td>
+        </tr>
     </tbody>
   </table>
 </main>
