--- a/app/views/alumno_informe_listar.html
+++ b/app/views/alumno_informe_listar.html
@@ -17,7 +17,7 @@
               <th>Fecha</th>
               <th>Título</th>
               <th>Descripción</th>
-              <!-- <th>Opciones</th> -->
+              <th>Opciones</th>
           </tr>
         </thead>
 
@@ -26,7 +26,9 @@
             <td>{{informe.fecha}}</td>
             <td>{{informe.titulo}}</td>
             <td>{{informe.descripcion}}</td>
-            <!-- <td><a title="Ver informe" href="#/informes-ver/{{informe.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td> -->
+            <td>
+                <a href="#/informes-agregar/{{idAlumno}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
+            </td> 
           </tr>
         </tbody>
       </table>
