--- a/app/views/archivo_agregar.html
+++ b/app/views/archivo_agregar.html
@@ -1,5 +1,5 @@
 <main class="container">
-        <a href="#/archivo-listar/{{idAlumno}}" class="btn btn-agregar">Volver</a>
+        <a href="#/archivo-listar/{{idMateria}}" class="btn btn-agregar">Volver</a>
 
         <h2 ng-show="!isAdding">Agregar <strong>archivo</strong></h2>
         <h2 ng-show="isAdding">Modificar <strong>archivo</strong></h2>
@@ -23,7 +23,7 @@
 
                 <div class="row">
                     <div class="input-field col s4 m4">
-                            <select name="Tipo" id="tipo" ng-model="tipo" ng-required="true">
+                            <select name="Tipo" id="tipo" ng-model="archivo.tipo" ng-required="true">
                                 <option value="1">Video</option>
                                 <option value="2">Documento</option>
                                 <option value="3">Texto</option>                      
