--- a/app/views/materia_listar.html
+++ b/app/views/materia_listar.html
@@ -23,7 +23,10 @@
       <tbody>
         <tr ng-repeat="materia in materias"> <!--  | filter: buscar -->
           <td>{{materia.nombre}}</td>
-          <td><a title="Editar" href="#/materias-agregar/{{materia.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
+          <td>
+            <a title="Editar" href="#/materias-agregar/{{materia.id}}"><i class="listar-iconos material-icons">edit</i></a>
+            <a title="Ver Archivos" href="#/archivo-listar/{{materia.id}}"><i class="listar-iconos material-icons">watch_later</i></a>
+          </td>
         </tr>
       </tbody>
     </table>
