--- a/app/views/cursada_listar.html
+++ b/app/views/cursada_listar.html
@@ -28,7 +28,7 @@
                 <td>{{cursada.comision.cuatrimestre}}</td>
                 <td>{{cursada.comision.nombreMateria}}</td>
                 <td>{{cursada.estado}}</td>
-                <td><a title="Ver Examenes" href="#/examenes-listar/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
+                <td><a title="Ver Examenes" href="#/examenes-listar/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a><a title="Editar" href="#/cursadas-modificar/{{cursada.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
               </tr>
             </tbody>
           </table>
