--- a/app/views/header.html
+++ b/app/views/header.html
@@ -46,14 +46,19 @@
       <a href="#!" class="brand-logo"><img src="assets/img/logo-utn.png" alt=""></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <!-- Icono menú responsive -->
       <ul class="right hide-on-med-and-down">
+          <li><a class="">Foro<i class="material-icons right">forum</i></a></li>
+          <li><a class="dropdown-button" data-activates="dropdownTutores">Tutores<i class="material-icons right">arrow_drop_down</i></a></li>
           <li><a class="dropdown-button" data-activates="dropdownAlumnos">Alumnos<i class="material-icons right">arrow_drop_down</i></a></li>
           <li><a class="dropdown-button" data-activates="dropdownConfiguracion">Configuración<i class="material-icons right">menu</i></a></li>
           <li><a class="dropdown-button" data-activates="dropdownUsuario"><img src="assets/img/default-user-image.png" alt="" class="circle img-profile-small"><i class="material-icons right">arrow_drop_down</i></a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
+          <li><a href="#!" class="disabled">Foro</a></li>
+          <li><a href="#/" class="subitem">Administrar</a></li>
+          <li><a href="#!" class="disabled">Tutores</a></li>
+          <li><a href="#/tutores-listar" class="subitem">Administrar</a></li>
           <li><a href="#!" class="disabled">Alumnos</a></li>
           <li><a href="#/alumnos-listar" class="subitem">Administrar</a></li>
-          <li><a href="#/alumnos-agregar" class="subitem">Agregar</a></li>
           <li><a href="#!" class="disabled">Configuración</a></li>
           <li><a href="#/materias-listar" class="subitem">Materias</a></li>
           <li><a href="#/profesores-listar" class="subitem">Profesores</a></li>
@@ -67,9 +72,10 @@
   
   <ul id="dropdownAlumnos" class="dropdown-content">
      <li><a href="#/alumnos-listar">Administrar</a></li>
-    
-    
   </ul>
+  <ul id="dropdownTutores" class="dropdown-content">
+      <li><a href="#/tutores-listar">Administrar</a></li>
+   </ul>
   <ul id="dropdownUsuario" class="dropdown-content">
     <li><a href="#!">Perfil</a></li>
     <li class="divider"></li>
