--- a/app/views/archivo_listar.html
+++ b/app/views/archivo_listar.html
@@ -19,7 +19,7 @@
       <tr>
           <th>Título</th>
           <th>Descripción</th>
-          <th>Tipo</th>
+          <th>Ruta</th>
 
       </tr>
     </thead>
