Archivo. Agrega links  pero no documentos!!!

--- a/app/views/archivo_agregar.html
+++ b/app/views/archivo_agregar.html
@@ -21,13 +21,6 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="input-field col s12 m6">
-                        <input class="elementos" id="fuente" name="fuente" type="text" class="" ng-model="archivo.fuente" ng-required="true">
-                        <label class="active" for="fuente">Fuente</label>
-                        <p class="advertencia" ng-show="formArchivo.fuente.$error.required && !formArchivo.fuente.$pristine" class="help-block">La fuente no puede ser vacía</p>
-                    </div>
-                </div>
                   <div class="row">
                    <label for="">Seleccione el tipo de fuente</label>
                          <div class="switch">
@@ -41,13 +34,12 @@
                  </div>
                 <div class="row"  >
                     <div class="input-field col s12 m6"style="height:50px;" ng-show="fuenteArchivo">                       
-                        <input class="elementos" id="ruta" name="ruta" type="file" class="" ng-model="archivo.ruta" ng-required="true">
-                        <p class="advertencia" ng-show="formArchivo.ruta.$error.required && !formArchivo.ruta.$pristine" class="help-block">Debe seleccionar un documento</p>
+                        <input class="elementos" id="ruta" name="ruta" type="file" class="" ng-model="archivo.ruta" >
                     </div>
                     <div class="input-field col s12 m6"  ng-show="!fuenteArchivo">
-                        <input class="elementos" id="link" name="link" type="text" class="" ng-model="archivo.ruta" ng-required="true">
+                        <input class="elementos" id="link" name="link" type="text" class="" ng-model="archivo.link" ng-required="false">
                         <label class="active" for="ruta">Ingrese el link</label>
-                        <p class="advertencia" ng-show="formArchivo.ruta.$error.required && !formArchivo.ruta.$pristine" class="help-block">El link no puede ser vacío</p>
+                        <p class="advertencia" ng-show="formArchivo.link.$error.required && !formArchivo.link.$pristine" class="help-block">El link no puede ser vacío</p>
                     </div>
                 </div>
 
