--- a/app/views/materia_listar.html
+++ b/app/views/materia_listar.html
@@ -25,7 +25,7 @@
           <td>{{materia.nombre}}</td>
           <td>
             <a title="Editar" href="#/materias-agregar/{{materia.id}}"><i class="listar-iconos material-icons">edit</i></a>
-            <a title="Ver Archivos" href="#/archivo-listar/{{materia.id}}"><i class="listar-iconos material-icons">watch_later</i></a>
+            <a title="Ver archivos" href="#/archivo-listar/{{materia.id}}"><i class="listar-iconos material-icons">archive</i></a>
           </td>
         </tr>
       </tbody>
