--- a/app/views/alumno_informe_listar.html
+++ b/app/views/alumno_informe_listar.html
@@ -27,7 +27,7 @@
             <td>{{informe.titulo}}</td>
             <td>{{informe.descripcion}}</td>
             <td>
-                <a href="#/informes-agregar/{{idAlumno}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
+                <a href="#/informes-modificar/{{informe.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
             </td> 
           </tr>
         </tbody>
