--- a/app/views/cursadas_agregar_multiples.html
+++ b/app/views/cursadas_agregar_multiples.html
@@ -10,7 +10,7 @@
                         <select id="comision" name="comision" ng-model="cursada.comision"  ng-required="true"> <!-- ng-options="comision as 'Año: '+comision.anio + '; Cuatrimestre: ' + comision.cuatrimestre + '; Profesores: ' + comision.dicta[0].nombreProfesor for comision in comisiones" -->
                             <option ng-repeat="comision in comisiones" 
                                     ng-selected="infoComision(comision)" 
-                                    value="{{comision.id}}">Año: {{comision.anio}}; Cuatrimestre: {{comision.cuatrimestre}}; Materia: {{comision.materia.nombre}};
+                                    value="{{comision.id}}">{{comision.materia.nombre}}   Cuatrimestre: {{comision.cuatrimestre}} Año: {{comision.anio}} 
                             </option>
                         </select>
                         <label for="comision">Seleccione una comisión:</label>
@@ -38,12 +38,18 @@
                 <div class="row">
                     <h5>Seleccionar <strong>alumnos</strong> para las cursadas</h5>
                     <div class="input-field">
-                        <input id="search" type="search" required ng-model="buscar">
+                        <input id="search" type="search"  ng-model="buscar">
                         <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                         <i class="material-icons">close</i>
                     </div>
                     <ul class="collection">
-                        <li class="collection-item" ng-repeat="alumno in alumnos | filter: buscar"><p>{{alumno.username}}</p><p>{{alumno.last_name}}, {{alumno.first_name}}</p><p>{{alumno.carrera}}</p><p>{{alumno.anioIngreso}}</p><input type="checkbox" class="filled-in" id="{{alumno.id}}" value="{{alumno.id}}" ng-model="selectedList[alumno.id]"/><label for="{{alumno.id}}"></label></li>
+                        <li class="collection-item" ng-repeat="alumno in alumnos | filter: buscar">
+                            <p>{{alumno.username}}</p>
+                            <p>{{alumno.last_name}}, {{alumno.first_name}}</p>
+                            <p>{{alumno.carrera}}</p><p>{{alumno.anioIngreso}}</p>
+                            <input type="checkbox" class="filled-in" id="{{alumno.id}}" value="{{alumno.id}}"  ng-model="selectedList[alumno.id]"/>
+                            <label for="{{alumno.id}}"></label>
+                        </li>
                     </ul>
                 </div>
 
