--- a/app/views/tutores_listar.html
+++ b/app/views/tutores_listar.html
@@ -32,7 +32,7 @@
           <td>
             <a href="#/tutores-agregar/{{tutor.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
             <a href="#/tutores-ver/{{tutor.id}}"><i title="Ver tutor" class="listar-iconos material-icons">search</i></a>
-            <a href="#/tutores-ver-informes/{{tutor.id}}"><i title="Ver informes realizados" class="listar-iconos material-icons">assignment</i></a>
+            <a href="#/tutores-listar-informes/{{tutor.id}}"><i title="Ver informes realizados" class="listar-iconos material-icons">assignment</i></a>
           </td>
          </tr>
       </tbody>
