--- a/app/views/header.html
+++ b/app/views/header.html
@@ -63,9 +63,9 @@
           <li><a href="#/materias-listar" class="subitem">Materias</a></li>
           <li><a href="#/profesores-listar" class="subitem">Profesores</a></li>
           <li><a href="#/comisiones-listar" class="subitem">Comisiones</a></li>
-          <li><a href="#/comisiones-listar" class="subitem">Escuelas</a></li>
-          <li><a href="#/comisiones-listar" class="subitem">Ciudades</a></li>
-          <li><a href="#/comisiones-listar" class="subitem">Países</a></li>
+          <li><a href="#/escuelas-listar" class="subitem">Escuelas</a></li>
+          <li><a href="#/ciudades-listar" class="subitem">Ciudades</a></li>
+          <li><a href="#/paises-listar" class="subitem">Países</a></li>
         </ul>
     </div>
   </nav>    
