--- a/app/views/tutores_listar_informes.html
+++ b/app/views/tutores_listar_informes.html
@@ -1,5 +1,6 @@
 <main class="listar-container" ng-init="obtenerInformesTutor()">
     <a href="#/tutores-listar" class="btn btn-volver">Volver</a>
+      <h3> <strong>Informes</strong> realizados por <strong> {{tutor.nombre}} {{tutor.apellido}}</strong> </h3>
     <div class="nav-wrapper">
         <form>
           <div class="input-field">
@@ -14,6 +15,7 @@
         <thead>
           <tr>
               <th>Fecha</th>
+              <th>Alumno</th>
               <th>Título</th>
               <th>Descripción</th>
               <th>Opciones</th>
@@ -23,10 +25,11 @@
         <tbody>
           <tr ng-repeat="informe in informes"> <!--  | filter: buscar -->
             <td>{{informe.fecha}}</td>
+            <td>{{informe.usuario.first_name}} {{informe.usuario.last_name}}</td>
             <td>{{informe.titulo}}</td>
             <td>{{informe.descripcion}}</td>
             <td>
-                <a href="#/informes-modificar/{{informe.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
+                <!-- <a href="#/informes-modificar/{{informe.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a> -->
             </td> 
           </tr>
         </tbody>
