--- a/app/views/actividad_listar.html
+++ b/app/views/actividad_listar.html
@@ -22,7 +22,7 @@
         <tbody>
           <tr ng-repeat="actividad in actividades"> <!--  | filter: buscar -->
             <td>{{actividad.descripcion}}</td>
-            <!-- <td><a title="Ver informe" href="#/informes-ver/{{informe.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td> -->
+            <td><a title="Ver actividad" href="#/actividades-ver/{{actividad.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
           </tr>
         </tbody>
       </table>
