--- a/app/views/alumno_ver.html
+++ b/app/views/alumno_ver.html
@@ -8,6 +8,8 @@
                 <div class="input-field col s6">
                     <h5>DNI: <strong>{{alumno.username}}</strong></h5>
                     <br>
+                    <h5>Carrera: <strong>{{alumno.carrera}}</strong></h5>
+                    <br>
                     <h5>Nombre: <strong>{{alumno.first_name}}</strong></h5>
                     <br>
                     <h5>Apellido: <strong>{{alumno.last_name}}</strong></h5>
