--- a/app/views/comision_ver.html
+++ b/app/views/comision_ver.html
@@ -16,6 +16,10 @@
                         <ul>
                             <li ng-repeat="profesor in comisiones.dicta"><h5>- <strong>{{profesor.nombreProfesor}}</strong></h5></li>
                         </ul>
+                        <h5>Horario:</h5>
+                        <ul>
+                            <li ng-repeat="hora in comisiones.horario"><h5>- <strong>{{hora.dia}}</strong> de {{hora.horaInicio}} a {{hora.horaFin}} </h5></li>
+                        </ul>
                     </div>
                     <div class="input-field col s6">
                         
