--- a/app/views/alumno/alumno_actividades.html
+++ b/app/views/alumno/alumno_actividades.html
@@ -1,4 +1,4 @@
-<main class="listar-container" ng-init="obtenerCursadasAlumno(alumnoLog)">
+<main class="listar-container" ng-init="obtenerActividadesAlumno(alumnoLog)">
         <div class="nav-wrapper">
             <form>
               <div class="input-field">
@@ -12,21 +12,14 @@
           <table>
             <thead>
               <tr>
-                  <th>Año</th>
-                  <th>Cuatrimestre</th>
-                  <th>Materia</th>
-                  <th>Estado</th>
+                  <th>Descripción</th>
                   <th>Opciones</th>
               </tr>
             </thead>
     
             <tbody>
-              <tr ng-repeat="cursada in cursadas ">
-                <td>{{cursada.comision.anio}}</td>
-                <td>{{cursada.comision.cuatrimestre}}</td>
-                <td>{{cursada.comision.nombreMateria}}</td>
-                <td>{{cursada.estado}}</td>
-                <td><a title="Ver Examenes" href="#/alumno-examenes-listar/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
+              <tr ng-repeat="actividad in actividades"> <!--  | filter: buscar -->
+                <td>{{actividad.descripcion}}</td>
               </tr>
             </tbody>
           </table>
@@ -46,11 +39,11 @@
           padding: 5px;
         }
         .btn-agregar{
-          margin-top: 20px;
-          margin-left: 20px;
+                margin-top: 20px;
+                margin-left: 20px;
         }
         .btn-volver{
-          margin-top: 20px;
+                margin-top: 20px;
         }
         @media screen and (max-width:800px){
           .listar-container{
