--- a/app/views/header.html
+++ b/app/views/header.html
@@ -66,6 +66,8 @@
           <li><a href="#/escuelas-listar" class="subitem">Escuelas</a></li>
           <li><a href="#/ciudades-listar" class="subitem">Ciudades</a></li>
           <li><a href="#/paises-listar" class="subitem">Países</a></li>
+          <li><a href="#!" class="subitem">Perfil</a></li>
+          <li><a href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/logout');" class="subitem">Salir</a></li>
         </ul>
     </div>
   </nav>    
