--- a/app/views/tutor/tutor_cursadas_listar.html
+++ b/app/views/tutor/tutor_cursadas_listar.html
@@ -1,4 +1,5 @@
-<main class="listar-container" ng-init="obtenerCursadasAlumno(alumnoLog)">
+<main class="listar-container" ng-init="obtenerCursadas(idAlumno)">
+        <a href="#/tutor-alumnos" class="btn btn-volver">Volver</a>
         <div class="nav-wrapper">
             <form>
               <div class="input-field">
@@ -26,7 +27,7 @@
                 <td>{{cursada.comision.cuatrimestre}}</td>
                 <td>{{cursada.comision.nombreMateria}}</td>
                 <td>{{cursada.estado}}</td>
-                <td><a title="Ver Examenes" href="#/alumno-examenes-listar/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
+                <td><a title="Ver Examenes" href="#/tutor-examenes/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
               </tr>
             </tbody>
           </table>
