--- a/app/views/tutor/tutor_examenes_listar.html
+++ b/app/views/tutor/tutor_examenes_listar.html
@@ -1,4 +1,7 @@
-<main class="listar-container" ng-init="obtenerCursadasAlumno(alumnoLog)">
+<main class="listar-container">
+        
+        <a href="#/tutor-cursadas/{{idAlumno}}" class="btn btn-volver">Volver</a>
+
         <div class="nav-wrapper">
             <form>
               <div class="input-field">
@@ -12,24 +15,25 @@
           <table>
             <thead>
               <tr>
-                  <th>Año</th>
-                  <th>Cuatrimestre</th>
-                  <th>Materia</th>
-                  <th>Estado</th>
-                  <th>Opciones</th>
+                  <th>Fecha</th>
+                  <th>Nota</th>
+                  <th>Tipo</th>
+                  <th>Descripcion</th>
+                  <th>Comentario</th>
               </tr>
             </thead>
     
             <tbody>
-              <tr ng-repeat="cursada in cursadas ">
-                <td>{{cursada.comision.anio}}</td>
-                <td>{{cursada.comision.cuatrimestre}}</td>
-                <td>{{cursada.comision.nombreMateria}}</td>
-                <td>{{cursada.estado}}</td>
-                <td><a title="Ver Examenes" href="#/alumno-examenes-listar/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
+              <tr ng-repeat="examen in examenes ">
+                <td>{{examen.fecha}}</td>
+                <td>{{examen.nota}}</td>
+                <td>{{examen.tipo}}</td>
+                <td>{{examen.descripcion}}</td>
+                <td>{{examen.comentario}}</td>
+                <!-- <td><a title="Ver cursada" href="#/cursada-ver/{{cursada.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td> -->
               </tr>
             </tbody>
-          </table>
+          </table>    
     </main>
     
     <style>
