editar archivo y correcciones de id

--- a/app/views/archivo_agregar.html
+++ b/app/views/archivo_agregar.html
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container" ng-init="obtenerDatosArchivoAgregar()">
         <a href="#/archivo-listar/{{idMateria}}" class="btn btn-agregar">Volver</a>
 
         <h2 ng-show="!isAdding">Agregar <strong>archivo</strong></h2>
