--- a/app/views/archivo_listar.html
+++ b/app/views/archivo_listar.html
@@ -1,5 +1,5 @@
 <main class="listar-container" ng-init="obtenerArchivosMateria()">
-
+  <a href="#/materias-listar" class="btn btn-agregar">Volver</a>
   <a href="#/archivo-agregar" class="btn btn-agregar">Agregar Archivo</a>
 
   <div class="nav-wrapper">
@@ -20,6 +20,7 @@
           <th>Título</th>
           <th>Descripción</th>
           <th>Ruta</th>
+          <th>Opciones</th>
 
       </tr>
     </thead>
@@ -29,7 +30,10 @@
         <td>{{archivo.titulo}}</td>
         <td>{{archivo.descripcion}}</td>
         <td>{{archivo.ruta}}</td>
+        <td>
+            <a href="#/archivo-agregar/{{archivo.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
 
+        </td>
       </tr>
     </tbody>
   </table>
