modificar materia y detalles id  y modificar archivo

--- a/app/views/materia_agregar.html
+++ b/app/views/materia_agregar.html
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container" ng-init="obtenerDatosMateriaAgregar()">
         <a href="#/materias-listar" class="btn btn-volver">Volver</a>
 
         <h2 ng-show="!isAdding">Agregar <strong>materia</strong></h2>
