Correccion en tutores. Autor en informe. Actuaizar BD.

--- a/app/views/alumno_informe_listar.html
+++ b/app/views/alumno_informe_listar.html
@@ -27,7 +27,7 @@
             <td>{{informe.fecha}}</td>
             <td>{{informe.titulo}}</td>
             <td>{{informe.descripcion}}</td>
-            <td>{{informe.usuario.first_name}} {{informe.usuario.last_name}}</td>
+            <td>{{informe.autor.first_name}} {{informe.autor.last_name}}</td>
             <td>
                 <a href="#/informes-modificar/{{informe.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
             </td> 
