--- a/app/views/alumno_listar.html
+++ b/app/views/alumno_listar.html
@@ -1,4 +1,4 @@
-<main class="listar-container" ng-init="getCursadas()">
+<main class="listar-container" ng-init="getAlumnos()">
 
   <a href="#/alumnos-agregar" class="btn btn-agregar">Agregar alumno</a>
   <a href="#/cursadas-agregar-multiples" class="btn btn-agregar">Generar múltiples cursadas</a>
