--- a/app/views/header.html
+++ b/app/views/header.html
@@ -46,7 +46,7 @@
       <a href="#!" class="brand-logo"><img src="assets/img/logo-utn.png" alt=""></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <!-- Icono menú responsive -->
       <ul class="right hide-on-med-and-down">
-          <li><a class="">Foro<i class="material-icons right">forum</i></a></li>
+          <li><a href="#/foro-admin" class="">Foro<i class="material-icons right">forum</i></a></li>
           <li><a class="dropdown-button" data-activates="dropdownTutores">Tutores<i class="material-icons right">arrow_drop_down</i></a></li>
           <li><a class="dropdown-button" data-activates="dropdownAlumnos">Alumnos<i class="material-icons right">arrow_drop_down</i></a></li>
           <li><a class="dropdown-button" data-activates="dropdownConfiguracion">Configuración<i class="material-icons right">menu</i></a></li>
@@ -79,7 +79,7 @@
       <li><a href="#/tutores-listar">Administrar</a></li>
    </ul>
   <ul id="dropdownUsuario" class="dropdown-content">
-    <li><a href="#!">Perfil</a></li>
+    <li><a href="#/admin-ver">Perfil</a></li>
     <li class="divider"></li>
     <li><a href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/logout');">Salir</a></li>
   </ul>
