--- a/app/views/archivo_agregar.html
+++ b/app/views/archivo_agregar.html
@@ -21,22 +21,37 @@
                     </div>
                 </div>
 
-                  <div class="row">
-                   <label for="">Seleccione el tipo de fuente</label>
-                         <div class="switch">
+                <div class="row">
+                    <div class="col s12 m6" 
+                        <label for="">Seleccione el tipo de fuente</label>
+                        <div class="switch">
                             <label>
                             Link
-                            <input type="checkbox" ng-model="fuenteArchivo">
+                            <input class="input-field" type="checkbox" ng-model="fuenteArchivo">
                             <span class="lever"></span>
                             Archivo
                             </label>
                         </div>
-                 </div>
-                <div class="row"  >
-                    <div class="input-field col s12 m6"style="height:50px;" ng-show="fuenteArchivo">                       
-                        <input class="elementos" id="ruta" name="ruta" type="file" class="" ng-model="archivo.ruta" >
                     </div>
-                    <div class="input-field col s12 m6"  ng-show="!fuenteArchivo">
+                </div>
+
+                <div class="row"  >
+                    <div class="input-field col s12 m6" ng-show="fuenteArchivo">    
+                        <div class="file-field input-field">
+                          <div class="btn">
+                            <span>Archivo</span>
+                            <input id="archivoAsubir" name="archivoAsubir" type="file" ngf-select="" ngf-multiple="false" ng-model="archivoAsubir" ng-required="false">
+                          </div>
+                          <div class="file-path-wrapper">
+                            <input id="ruta" name="ruta" class="file-path validate" type="text" placeholder="Seleccione un archivo..." ng-model="archivo.ruta">
+                          </div>
+                        </div>
+
+                        <!--p class="advertencia" ng-show="formArchivo.archivo_a_subir.$error.required && !formArchivo.link.$pristine" class="help-block">Se debe seleccionar al menos un archivo</p-->
+
+                        <!--<input class="elementos" id="ruta" name="ruta" type="file" class="" ng-model="archivo.ruta" -->
+                    </div>
+                    <div class="input-field col s12 m6"  style="height:66px;" ng-show="!fuenteArchivo">
                         <input class="elementos" id="link" name="link" type="text" class="" ng-model="archivo.link" ng-required="false">
                         <label class="active" for="ruta">Ingrese el link</label>
                         <p class="advertencia" ng-show="formArchivo.link.$error.required && !formArchivo.link.$pristine" class="help-block">El link no puede ser vacío</p>
@@ -44,8 +59,8 @@
                 </div>
 
                 
-                <input type="submit" class="btn" value="Agregar" ng-show="!isAdding" ng-disabled="formArchivo.$invalid">
-                <input type="submit" class="btn" value="Modificar" ng-show="isAdding" ng-disabled="formArchivo.$invalid">
+                <input type="submit" class="btn" value="Agregar" ng-show="!isAdding" ng-disabled="formArchivo.$invalid || ( !formArchivo.$invalid && !archivoParaSubir_O_LinkNoVacio())">
+                <input type="submit" class="btn" value="Modificar" ng-show="isAdding" ng-disabled="formArchivo.$invalid || ( !formArchivo.$invalid && !archivoParaSubir_O_LinkNoVacio())">
             </form>
         </div>
     </main>
