--- a/app/views/admin_foro_agregarCat.html
+++ b/app/views/admin_foro_agregarCat.html
@@ -1,8 +1,8 @@
 <main class="container">
     <a href="#/foro-admin" class="btn btn-agregar">Volver</a>
 
-    <h2 ng-show="!isAdding">Agregar <strong>categoria</strong></h2>
-    <h2 ng-show="isAdding">Modificar <strong>categoria</strong></h2>
+    <h2 ng-show="!isAdding">Agregar <strong>categoría</strong></h2>
+    <h2 ng-show="isAdding">Modificar <strong>categoría</strong></h2>
 
     <div class="row">
         <form id="formCategoriaForo" name="formCategoriaForo" class="col s12" ng-submit="agregarCategoria(categoria)">
