--- a/app/views/admin_foro_mensajes.html
+++ b/app/views/admin_foro_mensajes.html
@@ -1,16 +1,22 @@
 <main class="container" ng-init="obtenerMensajes(idTema)">
 
-    <a href="#/foro-admin" class="btn btn-volver">Volver</a>
+    <a href="#/foro-temas/{{idTema}}" class="btn btn-volver">Volver</a>
     <a href="#/foro-agregarMensaje/{{idTema}}" class="btn btn-agregar">Agregar mensaje</a>
 
     <ul class="collection with-header">
         <li class="collection-header"><h4>Mensajes</h4></li>
-        <li class="collection-item" ng-repeat="mensaje in mensajes">{{mensaje.contenido}} | Fecha: {{mensaje.fecha}} | Usuario: {{mensaje.usuario.last_name}}, {{mensaje.usuario.first_name}}</li>
+        <!-- <li class="collection-item" ng-repeat="mensaje in mensajes">{{mensaje.contenido}} | Fecha: {{mensaje.fecha}} | Usuario: {{mensaje.usuario.last_name}}, {{mensaje.usuario.first_name}}</li> -->
+        <li class="collection-item" ng-repeat="mensaje in mensajes">
+            <p>{{mensaje.contenido}}</p><p class="mensaje-info">Fecha: {{mensaje.fecha}} | Realizado por: {{mensaje.usuario.last_name}}, {{mensaje.usuario.first_name}}</p>
+        </li>
     </ul>
     
 </main>
 
 <style>
+    .mensaje-info{
+        font-size: 11px;
+    }
     .btn-agregar{
         margin-top: 20px;
         margin-left: 10px;
