--- a/app/views/admin_foro_temas.html
+++ b/app/views/admin_foro_temas.html
@@ -5,11 +5,25 @@
 
     <ul class="collection with-header">
         <li class="collection-header"><h4>Temas</h4></li>
-        <li class="collection-item" ng-repeat="tema in temas"><a href="#/foro-mensajes/{{tema.id}}">{{tema.titulo}}</a> Estado: {{tema.estado}} | Visitas: {{tema.visitas}}</li>
+        <li class="collection-item" ng-repeat="tema in temas"><a href="#/foro-mensajes/{{tema.id}}">{{tema.titulo}}</a> Estado: {{tema.estado}} | Visitas: {{tema.visitas}} <a title="Editar" href="#/foro-modificarTema/{{tema.id}}">
+            <i class="material-icons btn-opciones">edit</i></a><button title="Eliminar" class="btn-remove" ng-click="eliminarTema(tema.id)"><i class="material-icons btn-opciones" style="color: red;">close</i></button>
+                  </li>
     </ul>
 </main>
 
 <style>
+    .btn-opciones{
+        font-size: 20px;
+    }
+    .btn-remove{
+        background: white;
+        border: 0;
+        padding: 0;
+        margin: 0;
+    }
+    .btn-remove:hover{
+        background: white;
+    }
     .btn-agregar{
         margin-top: 20px;
         margin-left: 10px;
