--- a/app/views/headerAlumno.html
+++ b/app/views/headerAlumno.html
@@ -3,7 +3,7 @@
           <a href="#!" class="brand-logo"><img src="assets/img/logo-utn.png" alt=""></a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <!-- Icono menú responsive -->
           <ul class="right hide-on-med-and-down">
-              <li><a class="">Foro<i class="material-icons right">forum</i></a></li>
+              <li><a href="#/foro-alumno" class="">Foro<i class="material-icons right">forum</i></a></li>
               <li><a class="dropdown-button" data-activates="dropdownAlumnos">Alumno<i class="material-icons right">arrow_drop_down</i></a></li>
               <!-- <li><a class="dropdown-button" data-activates="dropdownConfiguracion">Configuración<i class="material-icons right">menu</i></a></li> -->
               <li><a class="dropdown-button" data-activates="dropdownUsuario"><img src="assets/img/default-user-image.png" alt="" class="circle img-profile-small"><i class="material-icons right">arrow_drop_down</i></a></li>
