--- a/app/views/headerTutor.html
+++ b/app/views/headerTutor.html
@@ -3,7 +3,7 @@
           <a href="#!" class="brand-logo"><img src="assets/img/logo-utn.png" alt=""></a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <!-- Icono menú responsive -->
           <ul class="right hide-on-med-and-down">
-              <li><a class="">Foro<i class="material-icons right">forum</i></a></li>
+              <li><a href="#/foro-tutor" class="">Foro<i class="material-icons right">forum</i></a></li>
               <li><a class="dropdown-button" data-activates="dropdownAlumnos">Alumnos<i class="material-icons right">arrow_drop_down</i></a></li>
               <li><a class="dropdown-button" data-activates="dropdownConfiguracion">Configuración<i class="material-icons right">menu</i></a></li>
               <li><a class="dropdown-button" data-activates="dropdownUsuario"><img src="assets/img/default-user-image.png" alt="" class="circle img-profile-small"><i class="material-icons right">arrow_drop_down</i></a></li>
@@ -25,7 +25,7 @@
          <li><a href="#/tutor-alumnos">Administrar</a></li>
       </ul>
       <ul id="dropdownUsuario" class="dropdown-content">
-        <li><a href="#!">Perfil</a></li>
+        <li><a href="#/tutor-ver">Perfil</a></li>
         <li class="divider"></li>
         <li><a href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/logout');">Salir</a></li>
       </ul>
