--- a/app/views/tutor/tutor_foro_mensajes.html
+++ b/app/views/tutor/tutor_foro_mensajes.html
@@ -1,6 +1,6 @@
 <main class="container" ng-init="obtenerMensajes(idTema)">
 
-    <a href="#/foro-tutor-temas/{{idTema}}" class="btn btn-volver">Volver</a>
+    <a href="#/foro-tutor-temas/{{idCategoria}}" class="btn btn-volver">Volver</a>
     <a href="#/foro-tutor-agregarMensaje/{{idTema}}" class="btn btn-agregar" ng-show="isAbierto">Agregar mensaje</a>
 
     <ul class="collection with-header">
