--- a/app/views/admin_foro_mensajes.html
+++ b/app/views/admin_foro_mensajes.html
@@ -1,6 +1,6 @@
 <main class="container" ng-init="obtenerMensajes(idTema)">
 
-    <a href="#/foro-temas/{{idTema}}" class="btn btn-volver">Volver</a>
+    <a href="#/foro-temas/{{idCategoria}}" class="btn btn-volver">Volver</a>
     <a href="#/foro-agregarMensaje/{{idTema}}" class="btn btn-agregar">Agregar mensaje</a>
 
     <ul class="collection with-header">
