--- a/app/views/alumno/alumno_foro_mensajes.html
+++ b/app/views/alumno/alumno_foro_mensajes.html
@@ -1,6 +1,6 @@
 <main class="container" ng-init="obtenerMensajes(idTema)">
 
-        <a href="#/foro-alumno-temas/{{idTema}}" class="btn btn-volver">Volver</a>
+        <a href="#/foro-alumno-temas/{{idCategoria}}" class="btn btn-volver">Volver</a>
         <a href="#/foro-alumno-agregarMensaje/{{idTema}}" class="btn btn-agregar" ng-show="isAbierto">Agregar mensaje</a>
     
         <ul class="collection with-header">
