--- a/app/views/admin_foro.html
+++ b/app/views/admin_foro.html
@@ -6,7 +6,7 @@
         <li class="collection-header"><h4><i class="material-icons left centrado" style="padding-top: 6px;">forum</i> Foro</h4></li>
         <li class="collection-item" ng-repeat="categoria in categorias"><a href="#/foro-temas/{{categoria.id}}">{{categoria.nombre}}</a>
             <a title="Editar" href="#/foro-modificarCat/{{categoria.id}}">
-            <i class="material-icons btn-opciones">edit</i></a><button title="Eliminar" class="btn-remove" ng-click="prueba()"><i class="material-icons btn-opciones" style="color: red;">close</i></button>
+            <i class="material-icons btn-opciones">edit</i></a><button title="Eliminar" class="btn-remove" ng-click="eliminarCategoria(categoria.id)"><i class="material-icons btn-opciones" style="color: red;">close</i></button>
         </li>
     </ul>
     
