--- a/app/views/admin_foro_mensajes.html
+++ b/app/views/admin_foro_mensajes.html
@@ -7,13 +7,22 @@
         <li class="collection-header"><h4>Mensajes</h4></li>
         <!-- <li class="collection-item" ng-repeat="mensaje in mensajes">{{mensaje.contenido}} | Fecha: {{mensaje.fecha}} | Usuario: {{mensaje.usuario.last_name}}, {{mensaje.usuario.first_name}}</li> -->
         <li class="collection-item" ng-repeat="mensaje in mensajes">
-            <p>{{mensaje.contenido}}</p><p class="mensaje-info">Fecha: {{mensaje.fecha}} | Realizado por: {{mensaje.usuario.last_name}}, {{mensaje.usuario.first_name}}</p>
+            <p>{{mensaje.contenido}}</p><p class="mensaje-info">Fecha: {{mensaje.fecha}} | Realizado por: {{mensaje.usuario.last_name}}, {{mensaje.usuario.first_name}}<button title="Eliminar" class="btn-remove" ng-click="eliminarMensaje(mensaje.id)"><i class="material-icons btn-opciones" style="color: red;">close</i></button></p>
         </li>
     </ul>
     
 </main>
 
 <style>
+    .btn-opciones{
+        font-size: 13px;
+    }
+    .btn-remove{
+        background: white;
+        border: 0;
+        padding: 0;
+        margin: 0;
+    }
     .mensaje-info{
         font-size: 11px;
     }
