correcciones de rutas y otros

--- a/app/views/materia_listar.html
+++ b/app/views/materia_listar.html
@@ -24,7 +24,7 @@
         <tr ng-repeat="materia in materias"> <!--  | filter: buscar -->
           <td>{{materia.nombre}}</td>
           <td>
-            <a title="Editar" href="#/materias-agregar/{{materia.id}}"><i class="listar-iconos material-icons">edit</i></a>
+            <a title="Editar" href="#/materias-modificar/{{materia.id}}"><i class="listar-iconos material-icons">edit</i></a>
             <a title="Ver archivos" href="#/archivo-listar/{{materia.id}}"><i class="listar-iconos material-icons">archive</i></a>
           </td>
         </tr>
