--- a/app/views/ciudad_listar.html
+++ b/app/views/ciudad_listar.html
@@ -22,7 +22,7 @@
         <tbody>
           <tr ng-repeat="ciudad in ciudades">
             <td>{{ciudad.nombre}}</td>
-            <td><a title="Editar" href="#/ciudades-agregar/{{ciudad.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
+            <td><a title="Editar" href="#/ciudades-modificar/{{ciudad.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
           </tr>
         </tbody>
       </table>
