--- a/app/views/profesor_listar.html
+++ b/app/views/profesor_listar.html
@@ -25,7 +25,7 @@
         <tr ng-repeat="profesor in profesores"> <!--  | filter: buscar -->
           <td>{{profesor.nombre}}</td>
           <td>{{profesor.apellido}}</td>
-          <td><a title="Editar" href="#/profesores-agregar/{{profesor.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
+          <td><a title="Editar" href="#/profesores-modificar/{{profesor.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
         </tr>
       </tbody>
     </table>
